structure developed and maintained but still having issue with security